Update anagrams task